--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "topthink/framework",
+    "name": "thinkphp_test/framework",
     "description": "the new thinkphp framework",
     "type": "think-framework",
     "keywords": [
